# simple-wasm-web-server

./: .gitignore  README.md
.claude/: settings.local.json
auth-middleware/: Cargo.toml
auth-middleware/src/: lib.rs
auth-middleware/wit/: deps.toml  world.wit
hello-p3/: Cargo.toml  spin.toml
hello-p3/auth-middleware/: Cargo.toml
hello-p3/src/: lib.rs
hello-p3/wasm-auth-middleware/: Cargo.toml
hello-p3/wasm-auth-middleware/src/: lib.rs
wasm-auth-middleware/: Cargo.toml
wasm-auth-middleware/wit/: world.wit
wasm-http-server/: Cargo.toml
wasm-http-server/.claude/: settings.local.json
wasm-http-server/src/: lib.rs
wasm-http-server/wit/: world.wit
